--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -12,6 +12,10 @@
     {% endif %}
     <meta name="author" content="{{ site.name }}" />
 
+    {% if page.rgb1 %}
+    <meta name="theme-color" content="{{ page.rgb1 }}" />
+    {% endif %}
+
     {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
