--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -12,8 +12,8 @@
     {% endif %}
     <meta name="author" content="{{ site.name }}" />
 
-    {% if page.rgb1 %}
-    <meta name="theme-color" content="{{ page.rgb1 }}" />
+    {% if site.rgb1 %}
+    <meta name="theme-color" content="{{ site.rgb1 }}" />
     {% endif %}
 
     {% if page.title %}
